--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <title>
         Hello
-    </head>
+    </title>
     <body>
+        <h1>Welcome to my website!</h1>
         Hello, world!
     </body>
 </html>
