--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </title>
     <body>
         <h1>Welcome to my website!</h1>
+        <h2>Hello!</h2>
         Hello, world!
     </body>
 </html>
